# AFSUtils

./: .gitignore  Makefile  README.md  meson.build  stackdebug.txt  stackdebug.txt.146  stackdebug.txt.147
include/: AFS.h  afsio.h
src/: afs.c  fileio.c  libafs.c  main.c  pathverify.c
usefulres/: usefulres.txt
usefulres/testfiles/: ITEMMODEL.AFS
